# analyssa

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: bitset.rs  error.rs  events.rs  lib.rs  pointer.rs  target.rs  testing.rs  world.rs
src/analysis/: algebraic.rs  cfg.rs  constraints.rs  consts.rs  defuse.rs  evaluator.rs  liveness.rs  loop_analyzer.rs  loops.rs  memory.rs  mod.rs  patterns.rs  phis.rs  range.rs  resolver.rs  taint.rs  verifier.rs
src/analysis/dataflow/: framework.rs  lattice.rs  liveness.rs  mod.rs  reaching.rs  sccp.rs  solver.rs
src/analysis/symbolic/: evaluator.rs  expr.rs  mod.rs  ops.rs
src/graph/: directed.rs  edge.rs  indexed.rs  mod.rs  node.rs  traits.rs
src/graph/algorithms/: cycles.rs  dominators.rs  mod.rs  scc.rs  topological.rs  traversal.rs
src/host/: dirty.rs  mod.rs  store.rs
src/ir/: block.rs  exception.rs  instruction.rs  mod.rs  ops.rs  phi.rs  value.rs  variable.rs
src/ir/function/: builder.rs  canonical.rs  duplication.rs  editor.rs  kind.rs  mod.rs  queries.rs  rebuild.rs  repair.rs  transforms.rs
src/passes/: algebraic.rs  blockmerge.rs  controlflow.rs  copying.rs  deadcode.rs  gvn.rs  licm.rs  loopcanon.rs  mod.rs  predicates.rs  ranges.rs  reassociate.rs  scheduling.rs  strength.rs  threading.rs  utils.rs
src/scheduling/: capability.rs  mod.rs  pass.rs  scheduler.rs
tests/: builder_infrastructure.rs  control.rs  dataflow.rs  diamond.rs  evaluator.rs  infra.rs  memory.rs  mock_target_pipeline.rs  passes.rs  scheduling.rs  serde.rs  symbolic.rs  verifier.rs
tests/common/: mod.rs
