[package]
name = "analyssa"
version = "0.2.0"
edition = "2021"
authors = ["Johann Kempter <admin@binflip.rs>"]
rust-version = "1.88"
license = "Apache-2.0"
description = "Target-agnostic SSA IR, analyses, and optimization pipeline"
documentation = "https://docs.rs/analyssa"
readme = "README.md"
keywords = ["ssa", "ir", "compiler", "analysis", "optimization"]
categories = ["compilers", "development-tools"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--document-private-items"]

[lints.rust]
missing_docs = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
arithmetic_side_effects = "deny"
indexing_slicing = "deny"

[dependencies]
thiserror = "2.0.18"
boxcar = "0.2.14"
dashmap = "6.2.1"
rayon = "1.12.0"
log = "0.4.31"

[dev-dependencies]
